command: create global state

--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -8,6 +8,7 @@
     "rootDir": "src",
     "strict": true,
     "types": ["node"],
+    "typeRoots": ["types/", "node_modules/@types"],
     "esModuleInterop": true,
     "resolveJsonModule": true
   }
