--- a/cli/package.json
+++ b/cli/package.json
@@ -17,10 +17,13 @@
     "test": "npm i -g && memorandum"
   },
   "dependencies": {
+    "@project-serum/anchor": "^0.24.2",
+    "@solana/spl-token": "0.2.0",
     "commander": "^9.4.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@types/node-fetch": "^2.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
