--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,7 +1,7 @@
 [features]
 seeds = false
 [programs.localnet]
-memorandum = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+memorandum = "HuutBEMazN5RWDAQCXbDRFqxQc7hrYmhvR4XCn6Reo7i"
 
 [registry]
 url = "https://anchor.projectserum.com"
@@ -12,3 +12,4 @@ wallet = "/home/ubuntu/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+idl = "cp -R target/types cli/src/memorandum"
