--- a/cli/package.json
+++ b/cli/package.json
@@ -5,11 +5,12 @@
   "author": "hongbo",
   "version": "0.0.1",
   "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "bin": {
     "memorandum": "./lib/index.js"
   },
   "scripts": {
-    "build": "tsc -p .",
+    "build": "tsc -P .",
     "create": "npm run build && npm run test",
     "local": "npm uninstall -g && npm install -g && memorandum",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
@@ -18,14 +19,15 @@
   },
   "dependencies": {
     "@project-serum/anchor": "^0.24.2",
-    "@solana/spl-token": "0.2.0",
+    "@project-serum/borsh": "^0.2.5",
+    "@solana/spl-token": "0.1.8",
+    "bn.js": "^^5.1.2",
     "commander": "^9.4.0"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/node-fetch": "^2.6.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "@types/bn.js": "^4.11.6",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.5.2"
   },
   "keywords": [
     "cli",
