--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
-    "lib": ["esnext", "ESNext", "dom"],
+    "typeRoots": ["types/", "node_modules/@types"],
+    "lib": ["ESNext"],
+    "allowJs": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
     "declaration": true,
+    "declarationMap": true,
+
+    "target": "ESNext",
+    "module": "CommonJS",
+    
     "outDir": "lib",
     "rootDir": "src",
-    "strict": true,
     "types": ["node"],
-    "typeRoots": ["types/", "node_modules/@types"],
-    "esModuleInterop": true,
-    "resolveJsonModule": true
   }
 }
