--- a/cli/package.json
+++ b/cli/package.json
@@ -22,12 +22,13 @@
     "@project-serum/borsh": "^0.2.5",
     "@solana/spl-token": "0.1.8",
     "bn.js": "^^5.1.2",
-    "commander": "^9.4.0"
+    "commander": "^9.4.0",
+    "typescript": "^4.8.3"
   },
   "devDependencies": {
     "@types/bn.js": "^4.11.6",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.5.2"
+    "@types/node": "^18.7.18",
+    "ts-node": "^9.0.0"
   },
   "keywords": [
     "cli",
